--- a/src/client/styles/resets.scss
+++ b/src/client/styles/resets.scss
@@ -50,6 +50,11 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+table,
+th,
+td {
+	border: 1px solid;
+}
 ul {
     list-style-type: none;
 }
